--- a/problems/math/202.md
+++ b/problems/math/202.md
@@ -36,7 +36,7 @@ public:
 
 ---
 
-## Entendendo o o problema
+## Entendendo o problema
 
 A finalidade do problema é verificar se determinado número é um número feliz, assim, retornando verdadeiro se for feliz ou falso, caso contrário.
 
