--- a/problems/math/202.md
+++ b/problems/math/202.md
@@ -42,5 +42,5 @@ A finalidade do problema é verificar se determinado número é um número feliz
 
 Temos um número feliz quando a soma dos quadrados de seus digitos é igual a 1. Analisando, descobrimos que entre os inteiros de um dígito, ou seja, entre 1 e 9, apenas 1 e 7 são números felizes. A partir disso:
 
-De forma resumida, se **n** de cara for 1 ou 7, o problema está resolvido, **n** é feliz. Caso contrário, iteramos pelos dígitos de **n** pegando seus quadrados e adicionando a **sum**. Após isso, se a soma dos quadrados é um número de apenas um dígito, verificamos se este número é 1 ou 7, se for retornamos verdadeiro, caso contrário retornamos falso. Se a soma dos quadrados não for um número de apenas um dígito, continuamos até que seja. Detalhe: ao final de cada iteração do while, o novo número alvo é a soma dos quadrados, mas tudo é para descobrimos se **n** é feliz. :) 
+De forma resumida, se **n** de cara for 1 ou 7, o problema está resolvido, **n** é feliz. Caso contrário, iteramos pelos dígitos de **n** pegando seus quadrados e adicionando a **sum**. Após isso, se a soma dos quadrados é um número de apenas um dígito, verificamos se este número é 1 ou 7, se for retornamos verdadeiro, caso contrário retornamos falso. Se a soma dos quadrados não for um número de apenas um dígito, continuamos até que seja. Detalhe: ao final de cada iteração do while, o novo número alvo é a soma dos quadrados, mas tudo é para descobrirmos se **n** é feliz. ;) 
 
