--- a/problems/math/258.md
+++ b/problems/math/258.md
@@ -37,7 +37,7 @@ public:
 
 ---
 
-## Entendendo o código
+## Entendendo o problema e solução
 
 Dado um inteiro **num**, devemos somar seus dígitos até resultar em um inteiro de apenas um dídito. Detalhe, se ao percorrer um inteiro somando seus dígitos o resultado não for um inteiro de um dígito, o novo número a ser somado os dígitos é este resultado, assim, **sum** recebe 0 e prosseguimos.
 
