--- a/problems/math/412.md
+++ b/problems/math/412.md
@@ -30,7 +30,7 @@ public:
 
 ---
 
-## Entendendo o código
+## Entendendo o problema e solução
 
 Dado um inteiro **n**, devemos percorrer o intervalo [1, n] verificando cada número se é divisivel por 3, 5 ou pelos dois.
 
