Self Dividing Numbers

--- a/problems/math/728.md
+++ b/problems/math/728.md
@@ -1,7 +1,7 @@
 ## Problema
 Categoria: Matemática
 
-Problema: 728. Self Dividing Numbers
+Problema: 728.Self Dividing Numbers
 
 Nível de dificuldade: Fácil
 
@@ -32,7 +32,7 @@ public:
 
 ---
 
-## Entendendo o código
+## Entendendo o problema e solução
 
 Dado dois inteiros **left** e **right**, devemos percorrer o intervalo [left, right] incluindo ambos, verificando se cada número é divisível por todos os seus dígitos. Números incluindo 0 em seus dígitos não é considerado autodivisível.
 
