Intersection of Two Arrays

--- a/problems/sorting/349.md
+++ b/problems/sorting/349.md
@@ -33,4 +33,4 @@ public:
 
 Dado dois arrays de inteiros **nums1** e **nums2**  temos que retornar os números que eles tem em comum, sem repetições.
 
-Para começar, criamos **commonSet**, um contêiner **unordered_set**, para receber os números em comum entre **nums1** e **nums2** sem repetições. Criamos também **auxNums** que recebe **nums1** sem repetições e para facilitar a busca e evitar usar um loop aninhado. Iteramos por **nums2** verificando a partir da função **count** se cada elemento também está em **auxNums**, retorna 1 se o elemento existe e 0 caso contrário. Se existe inserimos o elemento em **commonSet**. Agora, convertemos **commonSet** para vector e atribuimos à ****commonVec**. Por fim, retornamos **commonVec**.
+Para começar, criamos **commonSet**, um contêiner **unordered_set**, para receber os números em comum entre **nums1** e **nums2** sem repetições. Criamos também **auxNums** que recebe **nums1** sem repetições e para facilitar a busca e evitar usar um loop aninhado. Iteramos por **nums2** verificando a partir da função **count** se cada elemento também está em **auxNums**, retorna 1 se o elemento existe e 0 caso contrário. Se existe inserimos o elemento em **commonSet**. Agora, convertemos **commonSet** para vector e atribuimos à **commonVec**. Por fim, retornamos **commonVec**.
