--- a/problems/sorting/75.md
+++ b/problems/sorting/75.md
@@ -3,7 +3,7 @@ Categoria: Sorting
 
 Problema: 75.Sort Colors
 
-Nível de dificuldade: Fácil
+Nível de dificuldade: Médio
 
 Link: https://leetcode.com/problems/sort-colors/description/
 
