--- a/problems/string/709.md
+++ b/problems/string/709.md
@@ -26,5 +26,5 @@ public:
 
 Dada uma string (s) aleatória, contendo caracteres maiúsculos e minúsculos, devemos retornar esta string com todos os seus caracteres convertidos para minúsculo.
 
-Para isso, usamos a função **transform** definida na biblioteca **<algorithm>** s[0,n], com o uso de uma função lambda convertendo cada caractere para minúsculo localmente.
+Para isso, usamos a função **transform** definida na biblioteca <**algorithm**> s[0,n], com o uso de uma função lambda convertendo cada caractere para minúsculo localmente.
 
