--- a/problems/array/283.md
+++ b/problems/array/283.md
@@ -31,7 +31,7 @@ public:
 ## Entendendo o problema e solução
 
 Dado um array de inteiros **nums**, devemos mover todos os zeros para o final do array, mantendo a ordem relativa dos elementos diferentes de zero. 
->[!NOTA]
+>[!NOTE]
 >Deve-se fazer isso in-place, sem criar uma cópia do contêiner.
 
 - Bem, primeiro criamos o inteiro **size** que recebe o tamanho inicial do array;
@@ -40,5 +40,5 @@ Dado um array de inteiros **nums**, devemos mover todos os zeros para o final do
 - O intero **size** declarado anteriormente é utilizado para descobrirmos quantos zeros existem no array. Portanto, agora, pegamos **size** que atualmente guarda o tamanho do array no inicio do algoritmo e subtraimos o tamanho atual do array; 
 - Por último, criamos um loop tendo como parâmetro **size**(a quantidade de zeros) e em cada iteração usamos **push_back** para adicionar um '0' no final do contêiner.
 
->[!NOTA]
+>[!NOTE]
 >Talvez você se pergunte porque não finalizei após a fução 'remove'. a resposta é porque os elementos no final do intervalo, após o novo "final lógico", ficam em um estado válido, mas não especificado (eles podem ser cópias dos elementos remanescentes ou manter seus valores originais).
